feat(models): update timeframe handling by removing default models and adjusting UI elements

--- a/docker/services/frontend/html/config-nhits.html
+++ b/docker/services/frontend/html/config-nhits.html
@@ -565,16 +565,12 @@
                         </div>
                         <div class="timeframe-breakdown">
                             <div style="font-size: 0.85rem; opacity: 0.7; margin-bottom: 0.75rem;">Modelle nach Timeframe:</div>
-                            <div class="training-info" style="grid-template-columns: repeat(4, 1fr);">
+                            <div class="training-info" style="grid-template-columns: repeat(3, 1fr);">
                                 <div class="training-stat" title="15-Minuten Modelle">
                                     <div class="value" id="stat-tf-m15">-</div>
                                     <div class="label">M15</div>
                                 </div>
-                                <div class="training-stat" title="Standard stündliche Modelle">
-                                    <div class="value" id="stat-tf-default">-</div>
-                                    <div class="label">1H (Std)</div>
-                                </div>
-                                <div class="training-stat" title="Stündliche Modelle mit H1-Suffix">
+                                <div class="training-stat" title="Stündliche Modelle">
                                     <div class="value" id="stat-tf-h1">-</div>
                                     <div class="label">H1</div>
                                 </div>
@@ -639,7 +635,6 @@
                     <select class="filter-select" id="timeframe-filter" onchange="filterModels()">
                         <option value="">Alle Timeframes</option>
                         <option value="M15">M15</option>
-                        <option value="default">1H (Standard)</option>
                         <option value="H1">H1</option>
                         <option value="D1">D1</option>
                     </select>
@@ -800,9 +795,8 @@
                 const res = await fetch(`${API_BASE}/forecast/models/by-timeframe`);
                 const data = await res.json();
 
-                document.getElementById('stat-tf-default').textContent = data.by_timeframe?.default?.count || 0;
-                document.getElementById('stat-tf-h1').textContent = data.by_timeframe?.H1?.count || 0;
                 document.getElementById('stat-tf-m15').textContent = data.by_timeframe?.M15?.count || 0;
+                document.getElementById('stat-tf-h1').textContent = data.by_timeframe?.H1?.count || 0;
                 document.getElementById('stat-tf-d1').textContent = data.by_timeframe?.D1?.count || 0;
             } catch (err) {
                 console.error('Failed to load model counts:', err);
