feat(links): update service links by replacing 'Symbols' with 'Cockpit' and removing 'Health' links

--- a/docker/services/frontend/html/index.html
+++ b/docker/services/frontend/html/index.html
@@ -767,7 +767,7 @@
                 <div class="service-links">
                     <a href="/service-easyinsight.html" target="_blank">Info</a>
                     <a href="http://10.1.19.102:3000/swagger/" target="_blank">API Docs</a>
-                    <a href="http://10.1.19.102:3000/api/symbols" target="_blank">Symbols</a>
+                    <a href="http://10.1.19.102:3000" target="_blank">Cockpit</a>
                 </div>
             </div>
 
@@ -787,7 +787,6 @@
                     <a href="/service-data.html" target="_blank">Info</a>
                     <a href="/config-data.html" target="_blank">Config</a>
                     <a href="/data/docs" target="_blank">API Docs</a>
-                    <a href="/data/health" target="_blank">Health</a>
                 </div>
             </div>
 
@@ -807,7 +806,6 @@
                     <a href="/service-nhits.html" target="_blank">Info</a>
                     <a href="/config-nhits.html" target="_blank">Config</a>
                     <a href="/nhits/docs" target="_blank">API Docs</a>
-                    <a href="/nhits/health" target="_blank">Health</a>
                 </div>
             </div>
 
@@ -826,7 +824,6 @@
                 <div class="service-links">
                     <a href="/service-rag.html" target="_blank">Info</a>
                     <a href="/rag/docs" target="_blank">API Docs</a>
-                    <a href="/rag/health" target="_blank">Health</a>
                 </div>
             </div>
 
@@ -845,7 +842,6 @@
                 <div class="service-links">
                     <a href="/service-llm.html" target="_blank">Info</a>
                     <a href="/llm/docs" target="_blank">API Docs</a>
-                    <a href="/llm/health" target="_blank">Health</a>
                 </div>
             </div>
         </div>
