feat: Add pattern history management and endpoints
- Introduced new endpoints for managing candlestick pattern history, including retrieval, statistics, and manual/automatic scanning.
- Implemented a PatternHistoryService to handle pattern detection and storage.
- Added a new HTML page for displaying candlestick patterns and their statistics.
- Enhanced the frontend with links to the new patterns page and integrated functionality for triggering scans and viewing results.
- Improved timestamp parsing in the candlestick pattern service to support ISO 8601 format.

--- a/docker/services/frontend/html/index.html
+++ b/docker/services/frontend/html/index.html
@@ -786,6 +786,7 @@
                 <div class="service-links">
                     <a href="/service-data.html" target="_blank">Info</a>
                     <a href="/config-data.html" target="_blank">Config</a>
+                    <a href="/config-patterns.html" target="_blank">Patterns</a>
                     <a href="/data/docs" target="_blank">API Docs</a>
                 </div>
             </div>
