feat: Update table header styles for improved visibility and modify title for clarity

--- a/docker/services/frontend/html/config-patterns.html
+++ b/docker/services/frontend/html/config-patterns.html
@@ -245,9 +245,10 @@
         }
 
         th {
-            background: rgba(0, 0, 0, 0.2);
+            background: #0d1525;
             position: sticky;
             top: 0;
+            z-index: 10;
             font-weight: 500;
             color: #a0a0a0;
             font-size: 0.85rem;
@@ -296,6 +297,10 @@
             text-transform: uppercase;
             letter-spacing: 0.5px;
             border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            background: #0d1525;
+            position: sticky;
+            top: 0;
+            z-index: 10;
         }
 
         .favorites-table td {
@@ -776,7 +781,7 @@
         <!-- Pattern History -->
         <div class="card">
             <div class="card-header">
-                <h2 class="card-title">Erkannte Patterns</h2>
+                <h2 class="card-title">Alle erkannte Patterns</h2>
             </div>
 
             <div class="toolbar">
