feat: Enhance candlestick pattern service with M5 timeframe support and improve data aggregation logic

--- a/docker/services/frontend/html/config-patterns.html
+++ b/docker/services/frontend/html/config-patterns.html
@@ -763,7 +763,7 @@
                             <th>Stärke</th>
                             <th>Timeframe</th>
                             <th style="text-align: right;">Konfidenz</th>
-                            <th style="text-align: right;">Zeit</th>
+                            <th style="text-align: right;">Pattern-Zeit</th>
                         </tr>
                     </thead>
                     <tbody id="favoritesBody">
@@ -831,7 +831,7 @@
                 <table class="favorites-table">
                     <thead>
                         <tr>
-                            <th>Zeit</th>
+                            <th>Pattern-Zeit</th>
                             <th>Symbol</th>
                             <th>Pattern</th>
                             <th>Kategorie</th>
