--- a/docker/services/frontend/html/config-patterns.html
+++ b/docker/services/frontend/html/config-patterns.html
@@ -831,20 +831,19 @@
                 <table class="favorites-table">
                     <thead>
                         <tr>
-                            <th>Pattern-Zeit</th>
                             <th>Symbol</th>
-                            <th>Pattern</th>
                             <th>Kategorie</th>
+                            <th>Pattern</th>
                             <th>Richtung</th>
                             <th>Stärke</th>
-                            <th style="text-align: right;">Konfidenz</th>
                             <th>Timeframe</th>
-                            <th style="text-align: right;">Preis</th>
+                            <th style="text-align: right;">Konfidenz</th>
+                            <th style="text-align: right;">Pattern-Zeit</th>
                         </tr>
                     </thead>
                     <tbody id="patternsTable">
                         <tr>
-                            <td colspan="9" class="loading">
+                            <td colspan="8" class="loading">
                                 <div class="spinner"></div>
                                 <p>Lade Patterns...</p>
                             </td>
@@ -1104,7 +1103,7 @@
             if (!patterns || patterns.length === 0) {
                 tbody.innerHTML = `
                     <tr>
-                        <td colspan="9" class="empty-state">
+                        <td colspan="8" class="empty-state">
                             <div class="empty-state-icon">📊</div>
                             <p>Keine Patterns gefunden</p>
                             <p style="font-size: 0.85rem; margin-top: 0.5rem;">Klicken Sie auf "Jetzt scannen" um Patterns zu erkennen</p>
@@ -1119,15 +1118,14 @@
                 const timeAgo = getTimeAgo(p.timestamp);
                 return `
                 <tr>
-                    <td class="col-time">${timeAgo}</td>
                     <td class="col-symbol">${p.symbol}</td>
-                    <td><a class="pattern-link" onclick="showPatternModal('${p.pattern_type}', '${p.direction}')">${info.name}</a></td>
                     <td><span class="badge badge-${p.category}">${p.category}</span></td>
+                    <td><a class="pattern-link" onclick="showPatternModal('${p.pattern_type}', '${p.direction}')">${info.name}</a></td>
                     <td><span class="badge badge-${p.direction}">${p.direction}</span></td>
                     <td><span class="badge badge-${p.strength}">${p.strength}</span></td>
-                    <td class="col-confidence">${Math.round(p.confidence * 100)}%</td>
                     <td><span class="badge badge-${p.timeframe.toLowerCase()}">${p.timeframe}</span></td>
-                    <td class="col-price">${p.price_at_detection?.toFixed(p.price_at_detection > 100 ? 2 : 5) || '-'}</td>
+                    <td class="col-confidence">${Math.round(p.confidence * 100)}%</td>
+                    <td class="col-time">${timeAgo}</td>
                 </tr>
             `}).join('');
         }
